--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,7 @@ header{
     display: inline-block;
     background-color: #e63946;
     margin-right: 35px;
+    margin-bottom: 35px;
     color: white;
     font-weight: 700;
     padding: 1rem 2rem;
@@ -351,3 +352,4 @@ header{
     }
 
 }
+
